# Electrostatic-application

./: CMakeLists.txt  README.md
.github/workflows/: build-app.yml
helper-scripts/abstract/: abstract-compile.sh
helper-scripts/project-impl/: compile-all-android.sh  compile-all-mcu.sh  compile-all.sh  compile-desktop-linux.sh  compile-electrostatic-app.sh  variables.sh
helper-scripts/project-impl/post-compile/: post-compile-electrostatic.sh
